--- a/deployment/deploy.yaml
+++ b/deployment/deploy.yaml
@@ -101,10 +101,15 @@
       community.docker.docker_container:
         name: "{{api_docker_name}}"
         image: "{{docker_image_name}}:{{docker_image_tag}}"
-        command: "./app api"
         state: started
         restart: yes
-        ports:
-          - 3701:3701
       tags:
-        - deployment
+        - restart_app
+    - name: Run docker for web
+      community.docker.docker_container:
+        name: "{{web_docker_name}}"
+        image: "{{docker_image_name}}:{{docker_image_tag}}"
+        state: started
+        restart: yes
+      tags:
+        - restart_app
