--- a/deployment/deploy.yaml
+++ b/deployment/deploy.yaml
@@ -8,11 +8,13 @@
     - dest_dir: "/home/steven/apps/feednomity-src"
     - git_repo: "git@github.com:evorts/feednomity.git"
     - docker_image_name: "evorts/feednomity"
-    - docker_image_tag: 1.0.23
+    - docker_image_tag: 1.0.24
     - docker_container_tag: ansible_date_time.epoch
     - web_docker_name: feednomity_web
     - api_docker_name: feednomity_api
     - blaster_docker_name: feednomity_blaster
+    - mount_dir_src: "/home/steven/apps/feednomity/exports"
+    - mount_dir_dest: "/go/bin/exports"
   tasks:
     # cleanup
     - name: Cleanup destination directory
@@ -68,6 +70,13 @@
           - 3700:3700
       tags:
         - deployment
+    - name: Ensure target directory for mounting exist
+      ansible.builtin.file:
+        path: "{{mount_dir_src}}"
+        state: directory
+        mode: '0755'
+      tags:
+        - deployment
     - name: Run docker for api
       community.docker.docker_container:
         name: "{{api_docker_name}}"
@@ -77,6 +86,9 @@
         restart: yes
         ports:
           - 3701:3701
+        mounts:
+          - source: "{{mount_dir_src}}"
+            target: "{{mount_dir_dest}}"
       tags:
         - deployment
     # cleanup
