--- a/deployment/deploy.yaml
+++ b/deployment/deploy.yaml
@@ -8,7 +8,7 @@
     - dest_dir: "/home/steven/apps/feednomity-src"
     - git_repo: "git@github.com:evorts/feednomity.git"
     - docker_image_name: "evorts/feednomity"
-    - docker_image_tag: 1.0.24
+    - docker_image_tag: 1.0.27
     - docker_container_tag: ansible_date_time.epoch
     - web_docker_name: feednomity_web
     - api_docker_name: feednomity_api
@@ -89,6 +89,7 @@
         mounts:
           - source: "{{mount_dir_src}}"
             target: "{{mount_dir_dest}}"
+            type: bind
       tags:
         - deployment
     # cleanup
