--- a/deployment/deploy.yaml
+++ b/deployment/deploy.yaml
@@ -8,7 +8,7 @@
     - dest_dir: "/home/steven/apps/feednomity-src"
     - git_repo: "git@github.com:evorts/feednomity.git"
     - docker_image_name: "evorts/feednomity"
-    - docker_image_tag: 1.0.28
+    - docker_image_tag: 1.0.29
     - docker_container_tag: ansible_date_time.epoch
     - web_docker_name: feednomity_web
     - api_docker_name: feednomity_api
@@ -50,6 +50,9 @@
         tag: "{{docker_image_tag}}"
         build:
           path: "{{dest_dir}}"
+          args:
+            USER_ID: $(id -u)
+            GROUP_ID: $(id -g)
         source: build
         state: present
       tags:
